--- a/NOT USED html/form.html
+++ b/NOT USED html/form.html
@@ -93,7 +93,7 @@
 
         </fieldset>
 
-        <button type="submit">Sign Up</button>
+        <button class="my-3" type="submit">Sign Up</button>
        
 
 
