--- a/whoweare.html
+++ b/whoweare.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-    <title>#blessed</title>
+    <title>Who We Are</title>
 
     <!--favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
@@ -87,32 +87,34 @@
 
     <!-- img title attribute shows a tool tip. alt attribute is for screen readers -->
     <div class="container">
-      <h1 id="whoweare" class="text-center my-5">Who We Are</h1>
+      <main>
+        <h1 id="whoweare" class="text-center my-5">Who We Are</h1>
 
-      <div class="row">
+        <div class="row">
 
-        <div class="col-md-6">
-          <div class="card mb-3">
-            <img class="card-img-top" src="img/carmen.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h4 class="card-title">Carmen Burghardt</h4>
-              <p class="card-text">Carmen is a designer from the land of cheese, weed, and sex, the Netherlands. Her expertise is design, research, and management. She likes to dance and make documentaries in her spare time.</p>
+          <div class="col-md-6">
+            <div class="card mb-3">
+              <img class="card-img-top" src="img/carmen.jpg" alt="Picture of Carmen Burghardt">
+              <div class="card-body">
+                <h2 class="card-title">Carmen Burghardt</h2>
+                <p class="card-text">Carmen is a designer from the land of cheese, tap-dancing, and liberal attitudes, the Netherlands. Her expertise is design, research, and management. She likes to dance and make documentaries in her spare time.</p>
+              </div>
             </div>
           </div>
-        </div>
 
 
 
-        <div class="col-md-6">
-          <div class="card mb-3">
-            <img class="card-img-top" src="img/charles.jpg" alt="Card image cap">
-            <div class="card-body">
-              <h4 class="card-title">Charles Hu</h4>
-              <p class="card-text">Charles is a designer from San Francisco, California, the land of hippies, tech and weed. He likes designing inclusive and beautiful products. He likes video games and listening to rap music.</p>
+          <div class="col-md-6">
+            <div class="card mb-3">
+              <img class="card-img-top" src="img/charles.jpg" alt="Picture of Charles Hu">
+              <div class="card-body">
+                <h2 class="card-title">Charles Hu</h2>
+                <p class="card-text">Charles is a designer from San Francisco, California, the land of hippies, technology, and relaxed attitudes towards recreational drugs. He likes designing inclusive products. He plays video games and listens to rap music.</p>
+              </div>
             </div>
           </div>
-        </div>
-      </div> <!--whoweare-->
+        </div> <!--whoweare-->
+      </main>
     </div> <!--- container-->
 
 
@@ -122,7 +124,7 @@
    <div class="container">
         <div class="table-responsive">
            <table class="table mt-5">
-              <caption class="mb-3">Fun Facts About Us</caption>
+              <caption class="mb-3 h2">Fun Facts About Us</caption>
 
             <!-- thead and tbody good for accessibility screen readers. tells browser that the row describes the data in the columns --> 
             <!-- tfoot contains sums, totals, source of data, copyright, etc. It goes between thead and tbody for some reason --> 
