--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 
 
 	<body class="bg-light">
+
+		<a href="#content" class="skip">Skip to content</a>
 		
 
 		<!-- navbar --> 
@@ -93,7 +95,7 @@
 			<main>
 
 
-				<div class="row hero-row">
+				<div class="row hero-row" id="content">
 					<div class="col-md-9">
 						<img class="img-fluid" src="img/winter.jpg" alt="Girl in fashionable winter jacket" title="Trendiest Looks for Winter">
 					</div>
@@ -281,6 +283,7 @@
 
 		<!-- Optional JavaScript -->
 	    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	    <script src="skiptocontent.js"></script>
 	    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
